--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.3.1",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
+    "twemoji": "^11.3.0",
     "uws": "^10.148.1",
     "vue": "^2.5.17",
     "vue-headful": "^2.0.1",
@@ -22,6 +23,7 @@
     "vue-router": "^3.0.2",
     "vue-socket.io": "^3.0.4",
     "vue-socket.io-extended": "^3.2.0",
+    "vue-twemoji": "^1.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
