--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "emojibase-data": "^3.2.1",
+    "emojibase-regex": "^2.0.1",
     "filesize": "^4.1.2",
     "futoji": "^0.2.4",
     "jquery": "^3.3.1",
