--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "filesize": "^4.1.2",
     "futoji": "^0.2.4",
     "jquery": "^3.3.1",
+    "match-sorter": "^2.3.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "twemoji": "^11.3.0",
