--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^3.0.2",
     "vue-socket.io": "^3.0.4",
     "vue-socket.io-extended": "^3.2.0",
+    "vue-twitter": "^0.1.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
