home page redesign.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "futoji": "^0.5.0",
     "jquery": "^3.4.0",
     "match-sorter": "^2.3.0",
+    "particles.js": "^2.0.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "twemoji": "^11.3.0",
@@ -22,6 +23,7 @@
     "vue-mq": "^1.0.1",
     "vue-recaptcha": "^1.1.1",
     "vue-router": "^3.0.2",
+    "vue-smooth-reflow": "^0.1.12",
     "vue-socket.io": "^3.0.4",
     "vue-socket.io-extended": "^3.2.0",
     "vue-twitter": "^0.1.0",
