--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-service": "^3.6.0",
     "@vue/eslint-plugin": "^4.2.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
+    "babel-eslint": "^10.0.2",
     "eslint-plugin-vue": "^5.0.0-0",
     "vue-template-compiler": "^2.5.17"
   },
