--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@vue/eslint-plugin": "^4.2.0",
     "babel-eslint": "^10.0.2",
     "eslint-plugin-vue": "^5.0.0-0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.17"
   },
   "postcss": {
