--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "futoji": "^0.5.0",
     "highlight.js": "^9.15.8",
     "jquery": "^3.4.0",
+    "markdown-it": "^9.0.1",
+    "markdown-it-chat-formatter": "^0.1.1",
     "match-sorter": "^2.3.0",
     "particles.js": "^2.0.0",
     "socket.io": "^2.2.0",
