--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "nertivia-client",
   "version": "0.4.7",
   "private": true,
+  "description": "chat app",
+  "author": "supertiger1234",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "core-js": "^3.4.3",
     "filesize": "^4.1.2",
     "highlight.js": "^9.15.8",
     "jquery": "^3.4.0",
@@ -39,11 +42,12 @@
   "devDependencies": {
     "@babel/core": "^7.5.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-eslint": "^3.0.5",
-    "@vue/cli-service": "^3.6.0",
+    "@vue/cli-plugin-babel": "^4.1.1",
+    "@vue/cli-plugin-eslint": "^4.1.1",
+    "@vue/cli-service": "^4.1.1",
     "@vue/eslint-plugin": "^4.2.0",
     "babel-eslint": "^10.0.2",
+    "eslint": "^4.19.1",
     "eslint-plugin-vue": "^5.0.0-0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
@@ -59,18 +63,16 @@
     "last 2 versions",
     "not ie <= 8"
   ],
-  "description": "chat app",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/supertiger1234/Nertivia-Client.git"
-  },
-  "keywords": [
-    "chat-app"
-  ],
-  "author": "supertiger1234",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/supertiger1234/Nertivia-Client/issues"
   },
-  "homepage": "https://github.com/supertiger1234/Nertivia-Client#readme"
+  "homepage": "https://github.com/supertiger1234/Nertivia-Client#readme",
+  "keywords": [
+    "chat-app"
+  ],
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/supertiger1234/Nertivia-Client.git"
+  }
 }
