--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-recaptcha": "^1.3.0",
     "vue-router": "^3.1.3",
     "vue-socket.io-extended": "^4.0.1",
+    "vue-virtual-scroll-list": "^1.4.4",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.1.2"
   },
@@ -37,7 +38,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
