--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.4.3",
     "linkify-it": "^2.2.0",
     "match-sorter": "^4.0.2",
+    "pako": "^1.0.11",
     "simple-markdown": "^0.7.1",
     "socket.io-client": "^2.3.0",
     "twemoji": "^12.1.4",
