--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "doodlepad": "^2.1.1",
+    "idb-keyval": "^3.2.0",
     "linkify-it": "^2.2.0",
     "match-sorter": "^4.0.2",
     "pako": "^1.0.11",
@@ -21,12 +23,13 @@
     "vue-codemirror": "^4.0.6",
     "vue-headful": "^2.1.0",
     "vue-mq": "^1.0.1",
+    "vue-property-decorator": "^8.4.1",
     "vue-recaptcha": "^1.3.0",
     "vue-router": "^3.1.6",
     "vue-socket.io-extended": "^4.0.1",
     "vue-virtual-scroll-list": "^1.4.6",
     "vuedraggable": "^2.23.2",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.3",
