added linkifyjs to fix link issues, fixed link issues

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "doodlepad": "^2.1.1",
     "idb-keyval": "^3.2.0",
+    "linkifyjs": "^2.1.9",
     "match-sorter": "^4.0.2",
     "pako": "^1.0.11",
     "simple-markdown": "^0.7.2",
