--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@hcaptcha/vue-hcaptcha": "^0.2.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "doodlepad": "^2.1.1",
