--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "linkifyjs": "^2.1.9",
     "match-sorter": "^4.1.0",
     "pako": "^1.0.11",
+    "seed-color": "^2.0.1",
     "simple-markdown": "^0.7.2",
     "socket.io-client": "^2.3.0",
     "twemoji": "^12.1.5",
@@ -43,7 +44,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
