--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.6.11",
     "vue-codemirror": "^4.0.6",
     "vue-headful": "^2.1.0",
+    "vue-i18n": "^8.18.2",
     "vue-mq": "^1.0.1",
     "vue-property-decorator": "^8.5.0",
     "vue-recaptcha": "^1.3.0",
