changed the style of message quotes

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     ],
     "rules": {
       "no-console": 0,
-      "no-unreachable": 0
+      "no-unreachable": 0,
+      "no-unused-vars": "warn"
     },
     "parserOptions": {
       "parser": "babel-eslint"
